# proposals.network

./: .eslintignore  .gitignore  .prettierignore  HACKING.md  README.md  dfx.json  eslint.config.js  juno.config.js  juno.config.mjs  juno.dev.config.json  juno.json  junolator  junolator.json  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/actions/create-pr/: action.yml
.github/actions/prepare/: action.yml
.github/workflows/: checks.yml  deploy.yaml  publish.yml  update-snses.yml
scripts/: actor.utils.mjs  build.csp.mjs  build.snses.mjs  collections.mjs  config.utils.mjs  controllers.mjs  deploy.sh  dfx.identity.mjs  download.icrc.sh  identity.utils.mjs  satellite.utils.mjs  update.neuron.mjs  upgrade.mjs  upload.icrc.mjs
sns/: sns_init.yaml
src/: app.css  app.d.ts  app.html  custom-events.d.ts
src/declarations/satellite/: satellite.api.ts  satellite.did.d.ts  satellite.factory.did.js
src/lib/api/: agent.api.ts  icp-proposal.api.ts  proposal.api.ts  sns-proposal.api.ts
src/lib/constants/: app.constants.ts  dashboard.constants.ts  editor.constants.ts  governance.constants.ts
src/lib/data/: snses.json
src/lib/derived/: busy.derived.ts  governance.derived.ts  nav.derived.ts  proposals.derived.ts  sns.derived.ts  snses.derived.ts  user-proposals.derived.ts
src/lib/stores/: busy.store.ts  (+6 more)
src/routes/: +layout.svelte
src/satellite/: Cargo.toml  satellite.did
src/satellite/src/: assert.rs  delete.rs  lib.rs  proposal.rs  types.rs
static/: robots.txt  site.webmanifest
(+283 files in other folders)
