[package]
name = "satellite"
version = "0.0.7"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.20"
ic-cdk = "0.19.0"
serde = "1.0.225"
serde_cbor = "0.11.2"
junobuild-satellite = { version = "0.3.1", default-features = false, features = ["on_delete_doc", "assert_delete_doc"] }
junobuild-macros = "0.1.1"
junobuild-utils = "0.1.5"

