[package]
name = "satellite"
version = "0.0.8"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.20"
ic-cdk = "0.19.0"
ic-cdk-macros = "0.19.0"
serde = "1.0.225"
junobuild-satellite = { version = "0.5.0", default-features = false, features = ["on_delete_doc", "assert_delete_doc"] }
junobuild-macros = "0.2.0"
junobuild-utils = "0.2.0"

